@@ -1,5 +1,14 @@
 2010-12-14  Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Headers/Foundation/Foundation.h:
+	* Source/GNUmakefile: Include NSCalendar.
+	* configure.ac: Check for unicode/ucal.h.
+	* Headers/Foundation/NSCalendar.h:
+	* Source/NSCalendar.m: Add completely empty NSCalendar and
+	NSDateCompoennts classes.
+	
+2010-12-14  Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/NSLocale.m: Initialize _components before using it and initilize
 	allLocales class variable in +initialize.  Also stop adding blank entries
 	to _components dictionary.
